syntax = "proto3";

package api.user.v1;

import "google/api/annotations.proto";


option go_package = "stuff/api/other/user/v1;v1";
service User {
	rpc CreateUser (CreateUserRequest) returns (CreateUserReply) {
		option (google.api.http) = {
			post: "/v1/user/register"
			body: "*"
		};
	};
	rpc UpdateUser (UpdateUserRequest) returns (UpdateUserReply) {
		option (google.api.http) = {
			put: "/v1/user/{id}"
			body: "*"
		};
	};
	rpc DeleteUser (DeleteUserRequest) returns (DeleteUserReply) {
		option (google.api.http) = {
			delete: "/v1/user/{id}"
		};
	};
	rpc GetUser (GetUserRequest) returns (GetUserReply) {
		option (google.api.http) = {
			get: "/v1/user/{id}"
		};
	};
	rpc UserLogin (UserLoginRequest) returns (UserLoginReply) {
		option (google.api.http) = {
			post: "/v1/user/login"
			body: "*"
		};
	};
}

message CreateUserRequest {
	string name = 1;
	string email = 2;
	string password = 3;	
}
message CreateUserReply {
	string response = 1;
}

message UpdateUserRequest {
	int64 id = 1 ;
	string name = 2;
	string address = 3;
	string phone = 4;
}
message UpdateUserReply {
	string response = 1;
}

message DeleteUserRequest {
	int64 id = 1 ;
}
message DeleteUserReply {}

message GetUserRequest {
	int64 id = 1 ;
}
message GetUserReply {
	string name = 1;
	string avatar = 2;
	string address = 3;
}

message ListUserRequest {}
message ListUserReply {}

message UserLoginRequest {
	string email = 1;
	string password = 2;
}

message UserLoginReply {
	string token = 1;
	string username = 2;
	string email= 3;
	string avatar= 4;
	string role= 5;
	string address= 6;
	string phone= 7;
	int64 id= 8;
}